<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/offset_medium">

    <ImageView
        android:id="@+id/icon"
        android:layout_width="@dimen/icon_48"
        android:layout_height="@dimen/icon_48"
        android:src="@drawable/account"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <TextView
        android:id="@+id/name"
        style="@style/BoldText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/offset_medium"
        app:layout_constraintStart_toEndOf="@+id/icon"
        app:layout_constraintTop_toTopOf="@id/icon"
        app:layout_constraintEnd_toStartOf="@+id/money"
        app:layout_constraintBottom_toBottomOf="@+id/icon"
        tools:text="Криштиану Роналду" />
    <ImageView
        android:id="@+id/money"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/cardmoney"
        app:layout_constraintBaseline_toBottomOf="@id/money"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/money"/>
    <TextView
        android:id="@+id/number"
        style="@style/RegularText"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/money"
        app:layout_constraintEnd_toEndOf="@id/money"
        app:layout_constraintTop_toTopOf="@id/money"
        app:layout_constraintStart_toStartOf="@id/money"
        tools:text="260$" />
    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/headerBarrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids=" icon , name , money" />

    <TextView
        android:id="@+id/infoTitle"
        style="@style/TextView.H4.Regular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/offset_medium"
        android:text="@string/infoTitle"
        app:layout_constraintTop_toBottomOf="@id/headerBarrier" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/titlesBarrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="end"
        app:barrierMargin="@dimen/offset_small"
        app:constraint_referenced_ids="ageTitle, positionTitle, teamTitle" />

        <TextView
            android:id="@+id/ageTitle"
            style="@style/TextView.Button.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/infoTitle"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/offset_small"
            android:text="@string/age_title" />

        <TextView
            android:id="@+id/ageValue"
            style="@style/TextView.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/ageTitle"
            app:layout_constraintStart_toStartOf="@id/titlesBarrier"
            tools:text="39 лет" />

        <TextView
            android:id="@+id/positionTitle"
            style="@style/TextView.Button.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/ageTitle"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/offset_4small"
            android:text="@string/position" />

        <TextView
            android:id="@+id/positionValue"
            style="@style/TextView.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/ageTitle"
            app:layout_constraintStart_toStartOf="@id/titlesBarrier"
            android:layout_marginTop="@dimen/offset_4small"
            tools:text="Полузащитник" />
    <TextView
        android:id="@+id/teamTitle"
        style="@style/TextView.Button.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/offset_4small"
        android:text="@string/team"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/positionTitle" />

    <TextView
        android:id="@+id/teamValue"
        style="@style/TextView.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/offset_4small"
        app:layout_constraintStart_toStartOf="@id/titlesBarrier"
        app:layout_constraintTop_toBottomOf="@id/positionTitle"
        tools:text="@string/team" />
    <TextView
        android:id="@+id/statsTitle"
        style="@style/TextView.Button.Medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/offset_medium"
        android:text="@string/stats"
        app:layout_constraintTop_toBottomOf="@id/teamTitle" />
    <TextView
        android:id="@+id/gamesCount"
        style="@style/TextView.Subtitle2.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/offset_medium"
        android:background="@drawable/rounded_bg"
        android:backgroundTint="@color/pink"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@id/goalsCount"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/statsTitle"
        tools:text="15 игр" />

    <TextView
        android:id="@+id/goalsCount"
        style="@style/TextView.Subtitle2.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_bg"
        android:backgroundTint="@color/teal_200"
        app:layout_constraintEnd_toStartOf="@id/gamesGrade"
        app:layout_constraintStart_toEndOf="@id/gamesCount"
        app:layout_constraintTop_toTopOf="@id/gamesCount"
        tools:text="15 хорошо" />

    <TextView
        android:id="@+id/gamesGrade"
        style="@style/TextView.Subtitle2.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_bg"
        android:backgroundTint="@color/brown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/goalsCount"
        app:layout_constraintTop_toTopOf="@id/gamesCount"
        tools:text="Оценка 4.4" />

    <TextView
        android:id="@+id/matchGrade"
        style="@style/TextView.Subtitle2.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/offset_small"
        android:background="@drawable/rounded_bg"
        android:backgroundTint="@color/gray_200"
        app:layout_constraintEnd_toStartOf="@id/goalsCount"
        app:layout_constraintStart_toEndOf="@id/gamesCount"
        app:layout_constraintTop_toBottomOf="@id/gamesCount"
        tools:text="Оценка 5" />

    <TextView
        android:id="@+id/redCardsCount"
        style="@style/TextView.Subtitle2.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/offset_small"
        android:background="@drawable/rounded_bg"
        android:backgroundTint="@color/red_200"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@id/gamesGrade"
        app:layout_constraintStart_toEndOf="@id/goalsCount"
        app:layout_constraintTop_toBottomOf="@id/gamesCount"
        tools:text="15 плохо" />
    <include
        android:id="@+id/football_gates"
        layout="@layout/item_football_pich"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/redCardsCount" />

</androidx.constraintlayout.widget.ConstraintLayout>